samples/_failures_safe/1761177132_52c53f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8432f03b.c: In function ‘main’:
./samples/SAFE/__tmp_8432f03b.c:164:12: error: missing terminating " character
  164 |     printf("Enter expression to tokenize:
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8432f03b.c:164:5: error: expected expression at end of input
  164 |     printf("Enter expression to tokenize:
      |     ^~~~~~
./samples/SAFE/__tmp_8432f03b.c:164:5: error: expected declaration or statement at end of input
